# slices-task-schedular

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis-docker-compose.yml
.github/workflows/: deploy.yml
aws/: aws_bedrock_connection.py
database/: mongo_db_connection.py
