[tool.poetry]
name = "slices-task-schedular"
version = "0.1.0"
description = "Python Backend"
authors = ["Saad Shirgaonkar <saad.shirgaonkar@siroclinpharm.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
boto3 = "^1.37.24"
pymongo = "^4.11.3"
uvicorn = "^0.34.0"
redis = "^5.2.1"
rq = "^2.2.0"
pydantic = "^2.11.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
